# dbt_core_northwind

./: .gitignore  README.md  docker-compose.yml  init-dbs.sh  pyproject.toml  requirements.txt
dbt_northwind/: dbt_project.yml
dbt_northwind/docs/: homepage.md
dbt_northwind/models/mart/finance/: _finance__models.yml  order_revenue_ytd.sql  orders.sql  orders_per_country_monthly.sql
dbt_northwind/models/mart/logistics/: _logistics__models.yml  products_rank.sql
dbt_northwind/models/mart/marketing/: _marketing__models.yml  customers.sql  customers_cluster.sql
dbt_northwind/models/staging/northwind/: _northwind__models.yml  _northwind__sources.yml  stg_northwind__categories.sql  stg_northwind__customers.sql  stg_northwind__employees.sql  stg_northwind__order_details.sql  stg_northwind__orders.sql  stg_northwind__products.sql  stg_northwind__suppliers.sql
dbt_northwind/seeds/: country_iso.csv  employee_salary.csv
streamlit/: dashboard.py
